--- a/Nodepop/package.json
+++ b/Nodepop/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "cross-env DEBUG=anunciosapi:* & npm start",
-    "initializeDB": "node startingDB.js"  
+    "initializeDB": "node ./javascripts/startingDB.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -18,6 +18,8 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "eslint": "^5.5.0",
+    "eslint-config-google": "^0.9.1"
   }
 }
